--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					
 					<div class="work">
 						<h4><span id="work1" getContent="MOLLY HELTZ CAPSULAR COLLECTION">MOLLY HELTZ CAPSULAR COLLECTION</span></h4>
-						<div class="work-img" id="work-img1"><img src="img/work1.gif" alt=""></div>
+						<div class="work-img" id="work-img1"><img src="img/work1.jpg" alt=""></div>
 					</div>
 					<div class="work">
 						<h4><span id="work2" getContent="THE INSIDE LOOK (MANILA)">THE INSIDE LOOK (MANILA)</span></h4>
@@ -106,11 +106,11 @@
 					</div>
 					<div class="work">
 						<h4><span id="work5" getContent="ELISE IS IN DOUBT">ELISE IS IN DOUBT</span></h4>
-						<div class="work-img" id="work-img5"><img src="img/work5.gif" alt=""></div>
+						<div class="work-img" id="work-img5"><img src="img/work5.jpg" alt=""></div>
 					</div>
 					<div class="work">
 						<h4><span id="work6" getContent="NOTHING CHANGES IF NOTHING CHANGES">NOTHING CHANGES IF NOTHING CHANGES</span></h4>
-						<div class="work-img" id="work-img6"><img src="img/work6.gif" alt=""></div>
+						<div class="work-img" id="work-img6"><img src="img/work6.jpg" alt=""></div>
 					</div>
 					<div class="work">
 						<h4><span id="work7" getContent="STORY OF MY LIFE ZHENYA RHYNZHUK">STORY OF MY LIFE ZHENYA RHYNZHUK</span></h4>
